<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_app_gree"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_text_logo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conta_tento"
                android:textColor="@color/button_app_txt"
                android:textSize="@dimen/sp_36" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_20"
                android:src="@drawable/ic_baralho_green" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:layout_weight="5"
                android:background="@drawable/corner_card_view_bottom"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="5dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/item_layout_login_nome_time_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_5"
                        android:hint="@string/time_one"
                        android:inputType="text"
                        android:maxLength="7"
                        android:textColorHint="@color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:layout_weight="5"
                android:background="@drawable/corner_card_view_bottom"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="5dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/item_layout_login_nome_time_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/time_two"
                        android:inputType="text"
                        android:maxLength="7"
                        android:textColorHint="@color/black" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/item_view_login_button_comecar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/cobreApp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_view_card_view_button_comecar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/comecar"
                    android:textColor="@color/button_app_txt"
                    android:textSize="22sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>