<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/button_app_gree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/corner_placar_sup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_layout_contagem_tento_txt_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/any_text"
                android:textColor="@color/button_app_txt"
                android:textSize="@dimen/sp_26"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_3"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_3"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_180"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_weight="5"
                app:cardCornerRadius="@dimen/dp_30"
                app:cardElevation="@dimen/dp_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_view_placar_time_one"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_90"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/button_app"
                    android:textSize="@dimen/sp_80" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_180"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_weight="5"
                app:cardCornerRadius="@dimen/dp_30"
                app:cardElevation="@dimen/dp_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_view_placar_time_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_90"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/button_app"
                    android:textSize="@dimen/sp_80" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item_view_botao_mais_time_one"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginRight="@dimen/dp_22"
                android:src="@drawable/ic_mais_pontos" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item_view_botao_menos_time_one"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_marginEnd="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:src="@drawable/ic_menos_pontos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item_view_botao_reset"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_bottom_reset_ponto" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_33"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item_view_botao_mais_time_two"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginRight="@dimen/dp_22"
                android:src="@drawable/ic_mais_pontos" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item_view_botao_menos_time_two"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_marginEnd="@dimen/dp_22"
                android:layout_marginRight="@dimen/dp_22"
                android:src="@drawable/ic_menos_pontos" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:background="@color/navajo_white_leve" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_layout_contagem_placar_txt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/any_text"
            android:textColor="@color/button_app"
            android:textSize="@dimen/sp_26" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal"
            android:padding="@dimen/dp_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/corner_card_view_bottom"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_3">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_layout_contagem_nome_time_one_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="8"
                            android:gravity="center"
                            android:padding="@dimen/dp_5"
                            android:text="@string/timeOneTxt"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_5">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_layout_contagem_nome_time_one"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:padding="@dimen/dp_5"
                            android:text="@string/timeOne"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_22" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_contagem_two_layout_placar_one_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dp_8"
                            android:gravity="center"
                            android:text="@string/placarOne"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_layout_contagem_placar_time_one"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dp_8"
                            android:gravity="center"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_28" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--ate ate mexer -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/item_view_botao_reset_placar"
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/ic_bottom_reset_ponto" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/corner_card_view_bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:padding="@dimen/dp_3">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_layout_contagem_nome_time_one_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="@dimen/dp_5"
                            android:text="@string/timeTwoTxt"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_5">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_layout_contagem_nome_time_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/dp_5"
                            android:text="@string/timeTwo"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_22" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_contagem_two_layout_placar_two_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dp_8"
                            android:gravity="center"
                            android:text="@string/placarTwo"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_layout_contagem_placar_time_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dp_8"
                            android:gravity="center"
                            android:textColor="@color/button_app"
                            android:textSize="@dimen/sp_28" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/dp_3">

            <androidx.cardview.widget.CardView
                android:id="@+id/item_view_login_button_comecar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/button_app"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/item_view_contagem_button_historico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/item_view_contagem_button_historico_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/historicodapartida"
                        android:textColor="@color/button_app_txt"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>